--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "jcf5@williams.edu"x
+  email: "jcf5@williams.edu"
   facebook: jeana.fermi.73
   github: jcfermi
   twitter: FrogandToadbot
